[tool.poetry]
name = "formation-count"
version = "0.1.0"
description = ""
authors = ["arpeggi <arpeggi@karrth.com>"]

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"
typer = "^0.9.0"

[tool.poetry.scripts]
formation-count = 'formation_count.main:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
